ref #31 add new post page
